crates/pg_syntax/tests/snapshots/postgres_regress/float4@71.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT float4send('985e15'::float4);"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..34
    FuncCall@7..34
      Ident@7..17 "float4send"
      Ascii40@17..18 "("
      TypeCast@18..34
        AConst@18..26
          Sconst@18..26 "'985e15'"
        Typecast@26..28 "::"
        TypeName@28..34
          Ident@28..34 "float4"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

