crates/pg_syntax/tests/snapshots/postgres_regress/float4@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT float4send('55895e-16'::float4);"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..37
    FuncCall@7..37
      Ident@7..17 "float4send"
      Ascii40@17..18 "("
      TypeCast@18..37
        AConst@18..29
          Sconst@18..29 "'55895e-16'"
        Typecast@29..31 "::"
        TypeName@31..37
          Ident@31..37 "float4"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

