crates/pg_syntax/tests/snapshots/postgres_regress/float4@76.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT float4send('57e18'::float4);"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    FuncCall@7..33
      Ident@7..17 "float4send"
      Ascii40@17..18 "("
      TypeCast@18..33
        AConst@18..25
          Sconst@18..25 "'57e18'"
        Typecast@25..27 "::"
        TypeName@27..33
          Ident@27..33 "float4"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

