crates/pg_syntax/tests/snapshots/postgres_regress/float4@79.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT float4send('76173e28'::float4);"
---
SelectStmt@0..38
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..36
    FuncCall@7..36
      Ident@7..17 "float4send"
      Ascii40@17..18 "("
      TypeCast@18..36
        AConst@18..28
          Sconst@18..28 "'76173e28'"
        Typecast@28..30 "::"
        TypeName@30..36
          Ident@30..36 "float4"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

