crates/pg_syntax/tests/snapshots/postgres_regress/float4@80.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT float4send('887745e-11'::float4);"
---
SelectStmt@0..40
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..17 "float4send"
      Ascii40@17..18 "("
      TypeCast@18..38
        AConst@18..30
          Sconst@18..30 "'887745e-11'"
        Typecast@30..32 "::"
        TypeName@32..38
          Ident@32..38 "float4"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

