crates/pg_syntax/tests/snapshots/postgres_regress/float4@81.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT float4send('5382571e-37'::float4);"
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..17 "float4send"
      Ascii40@17..18 "("
      TypeCast@18..39
        AConst@18..31
          Sconst@18..31 "'5382571e-37'"
        Typecast@31..33 "::"
        TypeName@33..39
          Ident@33..39 "float4"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

